# Traj_tracking

./: CMakeLists.txt  README.md  package.xml  traj_servo.rviz
doc/: NOTE.md
launch/: mocap_G305.launch  mocap_K216.launch  rviz.launch
scripts/: active_vision.py  px4_mocap.sh
src/: rc_ctl.cpp  traj_ctl.cpp
